--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,61 @@
         android:id="@+id/graphic_overlay"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/preview_view"
         app:layout_constraintLeft_toLeftOf="@id/preview_view"
         app:layout_constraintRight_toRightOf="@id/preview_view"
-        app:layout_constraintTop_toTopOf="@id/preview_view"
-        app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
+        app:layout_constraintTop_toTopOf="@id/preview_view" />
+
+    <LinearLayout
+        android:layout_width="@dimen/spacing_32"
+        android:layout_height="@dimen/spacing_12"
+        android:layout_margin="@dimen/spacing_5"
+        android:layout_marginBottom="@dimen/spacing_5"
+        android:background="@drawable/bg_low_transparent_radius12"
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/spacing_3"
+        android:paddingVertical="@dimen/spacing_3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="@string/counter"
+            android:textColor="@color/gray_500"
+            android:textSize="16sp" />
+
+        <TextView
+            android:textFontWeight="600"
+            android:id="@+id/reps_counter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textAlignment="textEnd"
+            android:textColor="@color/gray_800"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/spacing_12"
+        android:layout_margin="@dimen/spacing_5"
+        android:layout_marginBottom="@dimen/spacing_5"
+        android:background="@drawable/bg_low_transparent_radius12"
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/spacing_3"
+        android:paddingVertical="@dimen/spacing_3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="@string/selesai"
+            android:textColor="@color/gray_500"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
