--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="@id/preview_view" />
 
     <LinearLayout
+        android:id="@+id/btn_flip"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/spacing_12"
         android:layout_margin="@dimen/spacing_5"
@@ -40,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:text="@string/selesai"
+            android:text="@string/flip"
             android:textColor="@color/gray_500"
             android:textSize="16sp" />
     </LinearLayout>
