--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:titleTextAppearance="@style/title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@color/red"
+        app:title="AI Push Up Counter"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
+
     <androidx.camera.view.PreviewView
         android:id="@+id/preview_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -24,26 +34,15 @@
         app:layout_constraintRight_toRightOf="@id/preview_view"
         app:layout_constraintTop_toTopOf="@id/preview_view" />
 
-    <LinearLayout
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/transparent"
         android:id="@+id/btn_flip"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/spacing_12"
-        android:layout_margin="@dimen/spacing_5"
-        android:layout_marginBottom="@dimen/spacing_5"
-        android:background="@drawable/bg_low_transparent_radius12"
-        android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/spacing_3"
-        android:paddingVertical="@dimen/spacing_3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:text="@string/flip"
-            android:textColor="@color/gray_500"
-            android:textSize="16sp" />
-    </LinearLayout>
+        android:src="@drawable/ic_flip_camera"
+        android:scaleType="centerCrop"
+        android:layout_width="40dp"
+        android:layout_height="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
