--- a/app/src/main/res/layout/activity_complete.xml
+++ b/app/src/main/res/layout/activity_complete.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/congrats1"
+            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -64,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/congrats2"
+            android:textColor="@color/black"
             android:textSize="20sp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
