Adjust bottomsheet UI

--- a/app/src/main/res/layout/bottomsheet_tutorial.xml
+++ b/app/src/main/res/layout/bottomsheet_tutorial.xml
@@ -4,22 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_white_top_rounded"
+    android:elevation="5dp"
     android:orientation="vertical"
     android:paddingHorizontal="20dp"
     android:paddingBottom="20dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/ic_arrow_up" />
 
     <TextView
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/positionHint"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/clothesHint"
         android:textColor="@color/black" />
 
     <androidx.appcompat.widget.AppCompatImageView
